Updates with our principles
Signed-off-by: Daniell Mesquita <daniellplasmmer@gmail.com>

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 <article>
 <center><img width="200px" src="flag.png" title="Linkopolis" alt="Linkopolis"><h0>Linkopolis</h0><h6>Decentralized.</h6></center>
 <hr/>
+<ul>
+<li>Decentralized</li>
+<li>Human-centric</li>
+<li>Accepts immigrants</li>
+<li>Blood plasma donation program for preventing diseases/viruses</li>
+<li>Bitcoin and Ethereum economy (own ETH token)</li>
+<li>DAO (Aragon) governance</li>
+<li>Mesh networks (CJDNS, Yggdrasil)</li>
+<li>Open-source hardware and software</li>
+</ul>
 
 <zeronet><div id="out"></div>
 
@@ -81,7 +91,7 @@ page = new Page()
 </blockquote>
 </comments>
 <footer><div class="footer-shadow"></div>
-<center>Last update in 22/04/2019 at 22:47</center><a href="https://plasnerd.github.io/Framework.js/" target="blank"><img src="https://plasnerd.github.io/Framework.js/img/seal-2.png" width="167px" title="Built with FrameworkJS" style="-webkit-user-drag:element"></a><a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>
+<center>Last update in 22/04/2019 at 23:48</center><a href="https://plasnerd.github.io/Framework.js/" target="blank"><img src="https://plasnerd.github.io/Framework.js/img/seal-2.png" width="167px" title="Built with FrameworkJS" style="-webkit-user-drag:element"></a><a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>
 <div class="social-icons">
 <a href="https://github.com/PeeperSocial/" target="blank"><img src="img/social/riot.png" width="40px" height="40px" title="Chat with us or get support" alt="Riot.im" class="round"></a>
 <a href="https://github.com/PeeperSocial/" target="blank"><img src="img/social/github.svg" width="40px" height="40px" title="See first the news and improve FrameworkJS in GitHub" alt="GitHub"></a><!-- <a href="https://facebook.com/" target="blank"><img src="img/social/facebook.svg" width="40px" height="40px" title="Like us and receive latest news feed about FrameworkJS progress and other development tools" alt="Facebook"></a>--><!--<a href="https://twitter.com/" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about FrameworkJS progress and other development tools" alt="Twitter"></a>--><!--<a href="https://.deviantart.com" target="blank"><img src="img/social/deviantart.svg" width="40px" height="40px" title="Follow us and receive latest backgrounds, designs and apps" alt="Deviantart"></a>--></div>
