--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
 <li>Human-centric</li>
 <li>Accepts immigrants</li>
 <li>Blood plasma donation program for preventing diseases/viruses</li>
+<li>Cryogenic cemiteries</li>
 <li>Bitcoin and Ethereum economy (own ETH token)</li>
 <li>DAO (Aragon) governance</li>
 <li>Mesh networks (CJDNS, Yggdrasil)</li>
 <li>Open-source hardware and software</li>
+<li>Program for fair copyright (digital media with proportional prices to fit individual's own economy)</li>
+<li>Graphen studies, tests and applications with an incentivization program</li>
 </ul>
 
 <zeronet><div id="out"></div>
