--- a/index.html
+++ b/index.html
@@ -38,20 +38,40 @@
 
 <div class="content">
 <article>
-<center><img width="200px" src="flag.png" title="Linkopolis" alt="Linkopolis"><h0>Linkopolis</h0><h6>Decentralized.</h6></center>
+<center><img width="200px" src="flag.png" title="Linkopolis" alt="Linkopolis"><h0>Linkopolis</h0><h6>We are a culture and a community.</h6></center>
 <hr/>
 <ul>
-<li>Decentralized</li>
+<li>Decentralized (multiple links)</li>
 <li>Human-centric</li>
-<li>Accepts immigrants</li>
+<li>Immigrants and LGBTQ+ support program</li>
+<li>English courses for different languages</li>
 <li>Blood plasma donation program for preventing diseases/viruses</li>
 <li>Cryogenic cemiteries</li>
 <li>Bitcoin and Ethereum economy (own ETH token)</li>
+<li>UBI</li>
 <li>DAO (Aragon) governance</li>
 <li>Mesh networks (CJDNS, Yggdrasil)</li>
+<li>Minimum 1 MBps network speed</li>
 <li>Open-source hardware and software</li>
+<li>Distribution of free computing devices</li>
+<li>Democratic and cheaper proof of existence/copyright</li>
 <li>Program for fair copyright (digital media with proportional prices to fit individual's own economy)</li>
-<li>Graphen studies, tests and applications with an incentivization program</li>
+<li>Graphen studies, tests and applications with a incentivization program</li>
+<li>IoT in houses</li>
+<li>Personal tokens</li>
+<li>Stores/restaurants with veggies, fishes and insects</li>
+<li>Neighborhood for meal fans (breeding of pigs and chickens)</li>
+<li>Neighborhood for nerds/geeks</li>
+<li>Renewed education; with intuitivity, incentives and work opportunities</li>
+<li>Aggriculture without agrotoxies</li>
+<li>Climate-aware</li>
+<li>Civil peace program</li>
+<li>Linkopolis credit card (ETH token, Ethereum, Bitcoin, UBI)</li>
+<li>Electric cars</li>
+<li>Crosswalk-roads at top of streets</li>
+<li>Shared-riding stops</li>
+<li>Automatic glass protection (rain/wind/sun) on car/bus stops</li>
+<li>Fair basic medicare</li>
 </ul>
 
 <zeronet><div id="out"></div>
@@ -94,10 +114,10 @@ page = new Page()
 </blockquote>
 </comments>
 <footer><div class="footer-shadow"></div>
-<center>Last update in 22/04/2019 at 23:48</center><a href="https://plasnerd.github.io/Framework.js/" target="blank"><img src="https://plasnerd.github.io/Framework.js/img/seal-2.png" width="167px" title="Built with FrameworkJS" style="-webkit-user-drag:element"></a><a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>
+<center>Last update in 23/04/2019 at 02:39</center><a href="https://plasnerd.github.io/Framework.js/" target="blank"><img src="https://plasnerd.github.io/Framework.js/img/seal-2.png" width="167px" title="Built with FrameworkJS" style="-webkit-user-drag:element"></a><a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>
 <div class="social-icons">
-<a href="https://github.com/PeeperSocial/" target="blank"><img src="img/social/riot.png" width="40px" height="40px" title="Chat with us or get support" alt="Riot.im" class="round"></a>
-<a href="https://github.com/PeeperSocial/" target="blank"><img src="img/social/github.svg" width="40px" height="40px" title="See first the news and improve FrameworkJS in GitHub" alt="GitHub"></a><!-- <a href="https://facebook.com/" target="blank"><img src="img/social/facebook.svg" width="40px" height="40px" title="Like us and receive latest news feed about FrameworkJS progress and other development tools" alt="Facebook"></a>--><!--<a href="https://twitter.com/" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about FrameworkJS progress and other development tools" alt="Twitter"></a>--><!--<a href="https://.deviantart.com" target="blank"><img src="img/social/deviantart.svg" width="40px" height="40px" title="Follow us and receive latest backgrounds, designs and apps" alt="Deviantart"></a>--></div>
+<a href="https://riot.im/app/#/room/#linkopolis:matrix.org" target="blank"><img src="img/social/riot.png" width="40px" height="40px" title="Chat with us or get support" alt="Riot.im" class="round"></a>
+<a href="https://github.com/PeeperSocial/" target="blank"><img src="img/social/github.svg" width="40px" height="40px" title="See first the news and improve Linkopolis in GitHub" alt="GitHub"></a><!-- <a href="https://facebook.com/" target="blank"><img src="img/social/facebook.svg" width="40px" height="40px" title="Like us and receive latest news feed about FrameworkJS progress and other development tools" alt="Facebook"></a>--><!--<a href="https://twitter.com/" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about FrameworkJS progress and other development tools" alt="Twitter"></a>--><!--<a href="https://.deviantart.com" target="blank"><img src="img/social/deviantart.svg" width="40px" height="40px" title="Follow us and receive latest backgrounds, designs and apps" alt="Deviantart"></a>--></div>
 <div class="social-buttons"></div>
 <copyright><center>2017-2019 Linkopolis</center></copyright>
 </footer>
