Added news channel
Signed-off-by: Daniell Mesquita <daniellplasmmer@gmail.com>

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 <li>Cryogenic cemiteries</li>
 <li>Bitcoin and Ethereum economy (own ETH token)</li>
 <li>UBI</li>
-<li>DAO (Aragon) governance</li>
+<li>DAO governance</li>
+<p>Aragon is a full set for creating Decentralized Autonomous Organizations, and Linkopolis uses it and its apps. Aragon already haves a <a href="https://spacedecentral.net/" target="blank">decentralized space agency</a> using their technology, and now a decentralized city started with Linkpolis.</p>
 <li>Mesh networks (CJDNS, Yggdrasil)</li>
 <li>Minimum 1 MBps network speed</li>
 <li>Open-source hardware and software</li>
@@ -59,13 +60,13 @@
 <li>Graphen studies, tests and applications with a incentivization program</li>
 <li>IoT in houses</li>
 <li>Personal tokens</li>
+<li>Civil peace program</li>
+<li>Aggriculture without agrotoxies</li>
 <li>Stores/restaurants with veggies, fishes and insects</li>
 <li>Neighborhood for meal fans (breeding of pigs and chickens)</li>
 <li>Neighborhood for nerds/geeks</li>
-<li>Renewed education; with intuitivity, incentives and work opportunities</li>
-<li>Aggriculture without agrotoxies</li>
 <li>Climate-aware</li>
-<li>Civil peace program</li>
+<li>Renewed education; with intuitivity, incentives and work opportunities</li>
 <li>Linkopolis credit card (ETH token, Ethereum, Bitcoin, UBI)</li>
 <li>Electric cars</li>
 <li>Crosswalk-roads at top of streets</li>
@@ -114,12 +115,13 @@ page = new Page()
 </blockquote>
 </comments>
 <footer><div class="footer-shadow"></div>
-<center>Last update in 23/04/2019 at 02:39</center><a href="https://plasnerd.github.io/Framework.js/" target="blank"><img src="https://plasnerd.github.io/Framework.js/img/seal-2.png" width="167px" title="Built with FrameworkJS" style="-webkit-user-drag:element"></a><a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>
+<center>Last update in 24/04/2019 at 21:05</center><a href="https://plasnerd.github.io/Framework.js/" target="blank"><img src="https://plasnerd.github.io/Framework.js/img/seal-2.png" width="167px" title="Built with FrameworkJS" style="-webkit-user-drag:element"></a><a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>
 <div class="social-icons">
 <a href="https://riot.im/app/#/room/#linkopolis:matrix.org" target="blank"><img src="img/social/riot.png" width="40px" height="40px" title="Chat with us or get support" alt="Riot.im" class="round"></a>
+<a href="https://matrix.to/#/#linkopolisnews:matrix.org" target="blank"><img src="img/social/riot.png" width="40px" height="40px" title="Enable notifications for our updates" alt="Riot.im" class="round"></a>
 <a href="https://github.com/linkopolis" target="blank"><img src="img/social/github.svg" width="40px" height="40px" title="See first the news and improve Linkopolis in GitHub" alt="GitHub"></a><!-- <a href="https://facebook.com/" target="blank"><img src="img/social/facebook.svg" width="40px" height="40px" title="Like us and receive latest news feed about FrameworkJS progress and other development tools" alt="Facebook"></a>--><!--<a href="https://twitter.com/" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about FrameworkJS progress and other development tools" alt="Twitter"></a>--><!--<a href="https://.deviantart.com" target="blank"><img src="img/social/deviantart.svg" width="40px" height="40px" title="Follow us and receive latest backgrounds, designs and apps" alt="Deviantart"></a>--></div>
 <div class="social-buttons"></div>
-<copyright><center>2017-2019 Linkopolis</center></copyright>
+<copyright><center>2017-2019 Linkopolis by <a href="https://openplanetinitiative.github.io/" target="blank">Open Planet Initiative</a>.</center></copyright>
 </footer>
 </div>
 <clearnet><script id="dsq-count-scr" src="//framework-js.disqus.com/count.js" async></script></clearnet>
