Updates, thanks to @Kaffie/April
Signed-off-by: Daniell Mesquita <daniellplasmmer@gmail.com>

--- a/index.html
+++ b/index.html
@@ -38,17 +38,20 @@
 
 <div class="content">
 <article>
-<center><img width="200px" src="flag.png" title="Linkopolis" alt="Linkopolis"><h0>Linkopolis</h0><h6>We are a culture and a community.</h6></center>
+<center>
+<img src="Linkopolis.png"/>
+<img width="200px" src="flag.png" title="Linkopolis" alt="Linkopolis"><h0>Linkopolis</h0><h4>We are a culture and a community.</h4>
+<h6>Linkopolis is a test of a diaspora society, in a inter-connected city, with the physical concept of decentralization; while its center is a project of a seastead.</h6></center>
 <hr/>
 <ul>
 <li>Decentralized (multiple links)</li>
 <li>Human-centric</li>
-<li>Immigrants and LGBTQ+ support program</li>
-<li>English courses for different languages</li>
+<li>Immigrants and LGBT support program</li>
+<li>English and Esperanto courses for different languages.</li>
 <li>Blood plasma donation program for preventing diseases/viruses</li>
-<li>Cryogenic cemiteries</li>
-<li>Bitcoin and Ethereum economy (own ETH token)</li>
-<li>UBI</li>
+<li>Cryonic cemiteries</li>
+<li>Ethereum economy (own ETH token)</li>
+<li>UBI (Duniter, with own coin)</li>
 <li>DAO governance</li>
 <p>Aragon is a full set for creating Decentralized Autonomous Organizations, and Linkopolis uses it and its apps. Aragon already haves a <a href="https://spacedecentral.net/" target="blank">decentralized space agency</a> using their technology, and now a decentralized city started with Linkpolis.</p>
 <li>Mesh networks (CJDNS, Yggdrasil)</li>
@@ -69,10 +72,11 @@
 <li>Renewed education; with intuitivity, incentives and work opportunities</li>
 <li>Linkopolis credit card (ETH token, Ethereum, Bitcoin, UBI)</li>
 <li>Electric cars</li>
-<li>Crosswalk-roads at top of streets</li>
+<li>Roads at tunnels, with subterrain buildings</li>
 <li>Shared-riding stops</li>
 <li>Automatic glass protection (rain/wind/sun) on car/bus stops</li>
 <li>Fair basic medicare</li>
+<p>These ideas are open for new suggestions, with mention of your work.</p>
 </ul>
 
 <zeronet><div id="out"></div>
@@ -138,7 +142,7 @@ s.setAttribute('data-timestamp', +new Date());
 </blockquote>
 </comments>
 <footer><div class="footer-shadow"></div>
-<center>Last update in 25/04/2019 at 00:32</center><a href="https://plasnerd.github.io/Framework.js/" target="blank"><img src="https://plasnerd.github.io/Framework.js/img/seal-2.png" width="167px" title="Built with FrameworkJS" style="-webkit-user-drag:element"></a><a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>
+<center>Last update in 11/05/2019 at 19:08</center><a href="https://plasnerd.github.io/Framework.js/" target="blank"><img src="https://plasnerd.github.io/Framework.js/img/seal-2.png" width="167px" title="Built with FrameworkJS" style="-webkit-user-drag:element"></a><a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>
 <div class="social-icons">
 <a href="https://riot.im/app/#/room/#linkopolis:matrix.org" target="blank"><img src="img/social/riot.png" width="40px" height="40px" title="Chat with us or get support" alt="Riot.im" class="round"></a>
 <a href="https://matrix.to/#/#linkopolisnews:matrix.org" target="blank"><img src="img/social/riot.png" width="40px" height="40px" title="Enable notifications for our updates" alt="Riot.im" class="round"></a>
